Update linting to use Prettier and Markdownlint together more
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -29,6 +29,8 @@ lint:
     - .github/workflows/awsfulltest.yml
     # We use default Prettier settings
     - .prettierrc.yml
+    # We hang on to our Markdownlint config file for VSCode to read
+    - .markdownlint.yml
   nextflow_config: false
   # Currently not supported, but hopefully soon!
   # See https://github.com/nf-core/tools/issues/1031
