--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -56,5 +56,4 @@ lint:
     false
     # Can't find minimum NF version and doesn't like the addition of 'dispatch'
     # to the events
-  multiqc_config:
-    false
+  multiqc_config: false
