Disable linting for template HTML
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -41,3 +41,5 @@ lint:
     # Can't find minimum NF version and doesn't like the addition of 'dispatch'
     # to the events
   multiqc_config: false
+  # We actually use template strings in the pipeline, so turn this off
+  template_strings: false
